Geometry Nodes: Output socket name inconsistency Points node #113340

Closed
opened 2023-10-06 12:54:44 +02:00 by Simon Thommes · 2 comments
Member

System Information
Operating system: Linux-6.5.5-gentoo-x86_64-AMD_Ryzen_9_5950X_16-Core_Processor-with-glibc2.37 64 Bits, X11 UI
Graphics card: NVIDIA RTX A6000/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 535.113.01

Blender Version
Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-10-02 08:29, hash: 7f7e1ab08842
Also in 4.0, would be nice if that could still be fixed!
Worked: (newest version of Blender that worked as expected)

Short description of error
image

The socket output name should be Points, as this node only ever outputs points, in line with the other nodes.

**System Information** Operating system: Linux-6.5.5-gentoo-x86_64-AMD_Ryzen_9_5950X_16-Core_Processor-with-glibc2.37 64 Bits, X11 UI Graphics card: NVIDIA RTX A6000/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 535.113.01 **Blender Version** Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-10-02 08:29, hash: `7f7e1ab08842` Also in 4.0, would be nice if that could still be fixed! Worked: (newest version of Blender that worked as expected) **Short description of error** ![image](/attachments/77690c42-b00b-4103-96c4-20f79b784103) The socket output name should be `Points`, as this node only ever outputs points, in line with the other nodes.
Simon Thommes added the
Type
Report
Status
Needs Triage
Priority
Normal
labels 2023-10-06 12:54:44 +02:00
Falk David added the
Meta
Good First Issue
label 2023-10-06 12:57:38 +02:00
Falk David added this to the Nodes & Physics project 2023-10-06 12:57:49 +02:00
Contributor

Hello , can I take as a first issue ?

Hello , can I take as a first issue ?

@HamilcarR Yep/

@HamilcarR Yep/
Blender Bot added
Status
Archived
and removed
Status
Confirmed
labels 2023-11-15 11:31:38 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#113340
No description provided.