Fix issue #113340 : Fixed typo on the Points node's socket output name